# RepositoryNews

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_linux.sh  build_windows.sh  conanfile.txt
cmake/: FindGit2.cmake  FindQt.cmake  ProjectConfig.cmake  SetEnv.cmake
docs/: DiagramArchitecture.mdj  general_view.qmodel  interface_classes.qmodel  main_interface.qmodel
installer/: rpnews_setup.iss
rpnews/: CMakeLists.txt  ErrorMessageMaker.cpp  GitBranchIteratorWrapper.cpp  GitCommitLookupWrapper.cpp  GitCommitLookupWrapper.h  GitReferenceWrapper.cpp  GitReferenceWrapper.h  GitRemoteWrapper.cpp  GitRemoteWrapper.h  GitRepositoryFactory.cpp  GitRepositoryFactory.h  GitRepositoryImpl.cpp  GitRepositoryImpl.h  GitRepositoryTypeImpl.cpp  GitRepositoryTypeImpl.h  GitRevwalkWrapper.cpp  IRepository.h  IRepositoryFactory.h  IRepositoryType.h  LibraryWrapper.cpp  LibraryWrapper.h  PathChecker.cpp  PathChecker.h  RepositoryWrapper.cpp  RepositoryWrapper.h  SecureAllocator.h  SecureZeroMemoryFunction.h  main.cpp  mainwindow.cpp  rpnews_types.h
rpnews/git_implementation/: GitCreateRepositoryStrategyImpl.cpp  GitCreateRepositoryStrategyImpl.h  GitOpenRepositoryStrategyImpl.cpp  GitOpenRepositoryStrategyImpl.h  GitRepositoryFactory.cpp  GitRepositoryFactory.h  GitRepositoryImpl.cpp  GitRepositoryImpl.h  GitRepositoryTypeImpl.cpp  GitRepositoryTypeImpl.h
rpnews/gui/: AddNewRepository.cpp  AddNewRepository.h  AddNewRepository.ui  ContextMenu.cpp  ContextMenu.h  PopUpNotifierWindow.cpp  PopUpNotifierWindow.h  ShowAllRepositories.cpp  ShowAllRepositories.h  ShowAllRepositories.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  trayiconapp.cpp  trayiconapp.h
rpnews/helpers/: AESEncryption.cpp  AESEncryption.h  AutoStartApplication.cpp  AutoStartApplication.h  CheckExistConfig.cpp  CheckExistConfig.h  ConfigChecker.cpp  ConfigChecker.h  DeleteRepositoryFolder.cpp  DeleteRepositoryFolder.h  ErrorMessageMaker.cpp  ErrorMessageMaker.h  FillComboBox.cpp  FillComboBox.h  GetNewRepositoryFactory.cpp  GetNewRepositoryFactory.h  GetTimeInterval.cpp  GetTimeInterval.h  RepositoryExist.h  SaveConfig.cpp  SaveConfig.h  SecureAllocator.h  rpnews_types.h
rpnews/interfaces/: IRepository.h  IRepositoryFactory.h  IRepositoryType.h  IStrategy.h
rpnews/resources/: resources.qrc
rpnews/wrappers/: GitBranchIteratorWrapper.cpp  GitBranchIteratorWrapper.h  GitCommitLookupWrapper.cpp  GitReferenceWrapper.cpp  GitRemoteWrapper.cpp  GitRemoteWrapper.h  GitRevwalkWrapper.cpp  GitRevwalkWrapper.h  LibraryWrapper.cpp  LibraryWrapper.h  RepositoryWrapper.cpp  RepositoryWrapper.h
src/: CMakeLists.txt  main.cpp
src/rpnews/: rpnews.sln
src/rpnews/rpnews/: rpnews.vcxproj
tests/: CMakeLists.txt  rpnews_tests.cpp
tests/CreateNewGitRepository/: CMakeLists.txt  CreateNewGitRepository.cpp
tests/GMockTesting/: CMakeLists.txt  GMockTesting.cpp
tests/GTest/: GTest.vcxproj
tests/TestCrypt/: CMakeLists.txt  TestCrypt.cpp
tests/TestHelpers/: CMakeLists.txt  TestHelpers.cpp
tests/rpnews_tests/: ReadMe.txt  rpnews_tests.vcxproj  rpnews_tests.vcxproj.filters
